Fixed spacing between social, added Chronicle to credits, and added image count on gallery

--- a/app/assets/stylesheets/site/gallery.css.sass
+++ b/app/assets/stylesheets/site/gallery.css.sass
@@ -38,7 +38,6 @@
     line-height: 1.25
   .social
     float: right
-    width: 150px
   .gal-share .share-box
     margin-left: 0px
     float: left
@@ -52,7 +51,7 @@
   .share.twit
     width: 85px
   .share.face
-    margin-top: -3px
+    margin-top: -4px
   .small-gallery
     margin-bottom: -30px
     width: 210px
@@ -64,6 +63,7 @@
     clear: both
     width: 100%
     float: left
+    margin-bottom: 1em
   #title
     text-align: left
     padding: 0 3px
